feat: bump eclipse version, fix code completion